@startuml
class Contract{
   -int id
   -Date date
   -double insuranceSum
   -int typeInsurance
   -double tariffRate
   -int idClient
   -int idEmployee
   -int status
   -int idConfirmedAccountant
}

class ProfileWindow{
   +void LogoutButtonClicked()
   +void CancelButtonClicked()
}

class  LoginWindow{
   -Database db
   -void LoginButtonClicked()
   +void LoginSuccessful()
}

class TariffRateWindow{
   +void GetRateOne()
   +void GetRateTwo()
   +void GetRateThree()
   +void OkButtonClicked()
}

class ContractConfirmationWindow{
   -Contract currentContract
   +Contract GetCurrentContract()
   +QString GetComment()
   +void BackButtonClicked()
   +void ConfirmButtonClicked()
   +void RejectButtonClicked()
}

class AccountantStatisticsModel{
   +void UpdateModel()
   -void ResetSorting()
}

class AbstractWindowForRole{
   +ProfileWindow profile
   +SidePanel messagePanel
   +void ShowMessage()
   +void Logout()
}

class WindowNavigator{
   -AbstractWindowForRole WindowForRole
   -LoginWindow loginWindow
   -Database db
   -void CreateAndShowLoginWindow()
   -void HideAndRemoveLoginWindow()
   -void HideAndRemoveRoleWindow()
   +void LoginSuccessful()
   +void Logout()
}

class Database {
   +void CreateTables()
   +Contract GetContractById()
   +User GetUserById()
   +bool ChangeContract()
   +bool UserVerify()
   +bool AddUser()
   +bool AddContract()
   +bool ChangeUser()
   +bool ConfirmationContract()
   +bool RenegotiateContract()
}

class AccountantWindow{
   -Database db
   -TariffRateWindow tariffRate
   -ContractConfirmationWindow confirmWindow
   -TableView viewStatistics
   -TableView viewContracts
   -AccountantStatisticsModel statisticModel
   -void ShowViewContracts()
   -void ShowConfirmWindow()
   -void ShowTarriffRateWindow()
   -void UpdateViewContracts()
   -void DoubleClikedOnContract()
   -void ConfirmWindowBackButtonClicked()
   -void ConfirmWindowConfirmButtonClicked()
   -void ConfirmWindowRejectButtonClicked()
}

AbstractWindowForRole <|-- AccountantWindow
AccountantWindow o-- Database
WindowNavigator o-- Database
WindowNavigator -r-> AbstractWindowForRole
WindowNavigator --> LoginWindow
AccountantWindow --> ContractConfirmationWindow
AccountantWindow --> TariffRateWindow
AccountantWindow --> AccountantStatisticsModel
AbstractWindowForRole -r-> ProfileWindow
ContractConfirmationWindow --> Contract

LoginWindow o-- Database

@enduml